--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -12,10 +12,16 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <div class="text-capitalize text-decoration-none">{{ page.category }}</div>
+                    <div class="text-capitalize text-decoration-none text-dark">
+                        {{ page.category }}
+                    </div>
                 </li>
-                <li class="breadcrumb-item text-capitalize" *ngIf="page.isGrandchildPage">{{page.grandchildURL}}</li>
-                <li class="breadcrumb-item active">{{page.title}}</li>
+                <li class="breadcrumb-item text-capitalize text-dark" *ngIf="page.isGrandchildPage">
+                    {{page.grandchildURL}}
+                </li>
+                <li class="breadcrumb-item active text-dark">
+                    {{page.title}}
+                </li>
             </ol>
         </div>
     </div>
@@ -39,14 +45,14 @@
     </div>
 
     <!--<div class="row">-->
-        <!--<div class="container">-->
-            <!--<div class="col-md-4 offset-md-4 text-center">-->
-                <!--<h2 class="card-sec-title">Additional Details</h2>-->
-                <!--<div class="col-4 offset-4">-->
-                    <!--<div class="underline"></div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="container">-->
+    <!--<div class="col-md-4 offset-md-4 text-center">-->
+    <!--<h2 class="card-sec-title">Additional Details</h2>-->
+    <!--<div class="col-4 offset-4">-->
+    <!--<div class="underline"></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 
 
