--- a/src/app/components/pages/attendee-planning/attendee-planning.component.html
+++ b/src/app/components/pages/attendee-planning/attendee-planning.component.html
@@ -8,6 +8,15 @@
         <h1 class="title">{{ page.title }}</h1>
     </div>
 
+    <!-- * AD Headerbar * -->
+    <div class="row" *ngIf="headerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="row crumbs">
         <div class="container">
             <ol class="breadcrumb">
@@ -46,14 +55,14 @@
 
 
     <!--<div class="row">-->
-        <!--<div class="container">-->
-            <!--<div class="col-md-4 offset-md-4 text-center">-->
-                <!--<h2 class="card-sec-title">Additional Details</h2>-->
-                <!--<div class="col-4 offset-4">-->
-                    <!--<div class="underline"></div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="container">-->
+    <!--<div class="col-md-4 offset-md-4 text-center">-->
+    <!--<h2 class="card-sec-title">Additional Details</h2>-->
+    <!--<div class="col-4 offset-4">-->
+    <!--<div class="underline"></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 
     <div class="row cards" *ngIf="page.hasCards">
@@ -109,6 +118,14 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- * AD Footerbar * -->
+    <div class="row" *ngIf="footerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
             </div>
         </div>
     </div>
