--- a/src/app/components/pages/exhibitor-information/exhibitor-information.component.html
+++ b/src/app/components/pages/exhibitor-information/exhibitor-information.component.html
@@ -8,6 +8,15 @@
         <h1 class="title">{{ page.title }}</h1>
     </div>
 
+    <!-- * AD Headerbar * -->
+    <div class="row" *ngIf="headerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="row crumbs">
         <div class="container">
             <ol class="breadcrumb">
@@ -107,6 +116,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- * AD Footerbar * -->
+    <div class="row" *ngIf="footerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml" runScripts id="prmyAdSpace"></div>
             </div>
         </div>
     </div>
