--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -8,6 +8,15 @@
         <h1 class="title">{{ page.title }}</h1>
     </div>
 
+    <!-- * AD Headerbar * -->
+    <div class="row" *ngIf="headerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="row crumbs">
         <div class="container">
             <ol class="breadcrumb">
@@ -44,14 +53,14 @@
     </div>
 
     <!--<div class="row">-->
-        <!--<div class="container">-->
-            <!--<div class="col-md-4 offset-md-4 text-center">-->
-                <!--<h2 class="card-sec-title">Additional Details</h2>-->
-                <!--<div class="col-4 offset-4">-->
-                    <!--<div class="underline"></div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="container">-->
+    <!--<div class="col-md-4 offset-md-4 text-center">-->
+    <!--<h2 class="card-sec-title">Additional Details</h2>-->
+    <!--<div class="col-4 offset-4">-->
+    <!--<div class="underline"></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 
     <div class="row cards" *ngIf="page.hasCards">
@@ -110,6 +119,15 @@
             </div>
         </div>
     </div>
+
+    <!-- * AD Footerbar * -->
+    <div class="row" *ngIf="footerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div *ngIf="pressReleases && !page">
@@ -117,6 +135,15 @@
 
     <div class="container">
         <h1 class="title">{{ pageTitle }}</h1>
+    </div>
+
+    <!-- * AD Headerbar * -->
+    <div class="row" *ngIf="headerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="headerbar | safeHtml" runScripts id="prAdSpace"></div>
+            </div>
+        </div>
     </div>
 
     <div class="row crumbs">
@@ -137,6 +164,15 @@
                     *ngFor="let prEl of pressReleases"
                     [pressRelease]="prEl">
             </ddw-admin-press-release-item>
+        </div>
+    </div>
+
+    <!-- * AD Footerbar * -->
+    <div class="row" *ngIf="footerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml" runScripts id="prmyAdSpace"></div>
+            </div>
         </div>
     </div>
 </div>
