--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -8,6 +8,15 @@
         <h1 class="title">{{ page.title }}</h1>
     </div>
 
+    <!-- * AD Headerbar * -->
+    <div class="row" *ngIf="headerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="headerbar | safeHtml" runScripts id="AdSpace"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="row crumbs">
         <div class="container">
             <ol class="breadcrumb">
@@ -25,6 +34,7 @@
             </ol>
         </div>
     </div>
+
 
     <div class="row">
         <div class="container-fluid body-container">
@@ -112,4 +122,14 @@
             </div>
         </div>
     </div>
+
+    <!-- * AD Footerbar * -->
+    <div class="row" *ngIf="footerbar">
+        <div class="container">
+            <div class="text-center">
+                <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
+            </div>
+        </div>
+    </div>
 </div>
+
