Added option to delete cards and option button gui styling

--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -50,7 +50,7 @@
                         <th scope="col" style="vertical-align: top;">Phone Number</th>
                         <th scope="col" style="vertical-align: top;">Subject</th>
                         <th scope="col" style="vertical-align: top;">Date</th>
-                        <th scope="col" style="vertical-align: top;">Options</th>
+                        <th scope="col" style="vertical-align: top; text-align:center;">Options</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -75,24 +75,24 @@
                             {{ contact.sentDate | date:'medium' }}
                         </td>
                         <td class="text-center">
-                            <a class="btn btn-primary btn-sm icon-btn md-btn-flat user-tooltip"
+                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                matTooltip="View contact details"
                                [routerLink]="['/admin/contacts/', contact.$key]">
                                 <i class="fa fa-address-book"></i>&nbsp;
                             </a>
-                            <a class="btn btn-warning btn-sm icon-btn md-btn-flat user-tooltip ml-2"
+                            <a class="btn btn-warning btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                *ngIf="!contact.viewed"
                                matTooltip="Mark as viewed"
                                (click)="onMarkViewed(contact.$key)">
                                 <i class="fa fa-check"></i>
                             </a>
-                            <a class="btn btn-outline-warning btn-sm icon-btn md-btn-flat user-tooltip ml-2"
+                            <a class="btn btn-outline-warning btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                *ngIf="contact.viewed"
                                matTooltip="Un-Mark as viewed"
                                (click)="onUnmarkViewed(contact.$key)">
                                 <i class="fa fa-times"></i>
                             </a>
-                            <a class="btn btn-danger btn-sm icon-btn md-btn-flat user-tooltip ml-2"
+                            <a class="btn btn-danger btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                matTooltip="Delete Contact"
                                (click)="onDeleteContact(contact.$key)">
                                 <i class="fa fa-trash-alt text-white"></i>
