--- a/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
@@ -84,10 +84,15 @@
                             </a>
                         </td>
                         <td class="text-center">
-                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
+                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip mt-1"
                                matTooltip="View card details"
                                [routerLink]="['/admin/page-cards/', card.$key, 'edit']">
                                 <i class="fa fa-pencil-alt"></i>&nbsp;
+                            </a>
+                            <a class="btn btn-danger btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1 text-white"
+                               matTooltip="Delete Card?"
+                               (click)="onDeletePageCard(card.$key, card.title)">
+                                <i class="fa fa-trash-alt"></i>&nbsp;
                             </a>
                         </td>
                     </tr>
