--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -304,12 +304,30 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group" *ngIf="page.hasCards && !page.isExtURL">
+
+                                <div class="form-group" *ngIf="page.hasCards && !isExtURL">
                                     <a [routerLink]="['/admin/page-cards/new']"
                                        class="btn btn-sm btn-default mb-2">
                                         <i class="fa fa-window-restore"></i> Create New
                                     </a>
-                                    <br>
+                                </div>
+
+                                <div class="input-group mb-3" *ngIf="page.hasCards && !isExtURL">
+                                    <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fa fa-h1"></i>
+                                    </span>
+                                    </div>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="cardSectionTitle"
+                                           placeholder="Section Title"
+                                           aria-describedby="inputGroupPrepend"
+                                           [(ngModel)]="page.cardSectionTitle"
+                                           formControlName="cardSectionTitle">
+                                </div>
+
+                                <div class="form-group" *ngIf="page.hasCards && !page.isExtURL">
                                     <label for="cardOption1">Select Card
                                         &nbsp;&nbsp;<i class="fa fa-align-left"></i> Left
                                     </label>
