--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -295,7 +295,23 @@
                                    class="btn btn-sm btn-default mb-2">
                                     <i class="fa fa-window-restore"></i> Create New
                                 </a>
-                                <br>
+                            </div>
+
+                            <div class="input-group mb-3" *ngIf="hasCards && !isExtURL">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                        <i class="fa fa-h1"></i>
+                                    </span>
+                                </div>
+                                <input type="text"
+                                       class="form-control"
+                                       id="cardSectionTitle"
+                                       placeholder="Section Title"
+                                       aria-describedby="inputGroupPrepend"
+                                       formControlName="cardSectionTitle">
+                            </div>
+
+                            <div class="form-group" *ngIf="hasCards && !isExtURL">
                                 <label for="cardOption1">Select Card
                                     &nbsp;&nbsp;<i class="fa fa-align-left"></i> Left
                                 </label>
