--- a/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-list/admin-page-card-list.component.html
@@ -61,6 +61,8 @@
                         <th scope="col" style="vertical-align: top;">Image</th>
                         <th scope="col" style="vertical-align: top;">Title</th>
                         <th scope="col" style="vertical-align: top;">Button Text</th>
+                        <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;" class="text-center">Ext URL</th>
                         <th scope="col" style="vertical-align: top;" class="text-center">Options</th>
                     </tr>
                     </thead>
@@ -83,8 +85,23 @@
                                 {{ card.buttonString }}
                             </a>
                         </td>
+                        <td scope="col">
+                            <span *ngIf="card.author">
+                                {{ card.author }}
+                            </span>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                            <span class="badge badge-outline-success"
+                                  *ngIf="card.isExtURL">
+                                <i class="fa fa-check-circle"></i>
+                            </span>
+                            <span class="badge badge-outline-danger"
+                                  *ngIf="!card.isExtURL">
+                                <i class="fa fa-times-circle"></i>
+                            </span>
+                        </td>
                         <td class="text-center">
-                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip mt-1"
+                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip mt-1 ml-2"
                                matTooltip="View card details"
                                [routerLink]="['/admin/page-cards/', card.$key, 'edit']">
                                 <i class="fa fa-pencil-alt"></i>&nbsp;
