--- a/src/styles.css
+++ b/src/styles.css
@@ -232,6 +232,9 @@ h2.card-sec-title {
 .btn,
 .btn-primary,
 .btn-info,
+.alert-dark-dark,
+.alert-dark,
+.alert-success,
 .btn-secondary,
 .btn-warning,
 .btn-success,
