--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -1,7 +1,7 @@
 <!-- * ADMIN-USER-DETAILS * -->
 <div class="row mt-4">
     <div class="container">
-        <div class="row mb-4">
+        <div class="offset-md-10 mb-4">
             <a class="btn btn-default"
                [routerLink]="['/admin/users']">
                 <i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
