--- a/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
+++ b/src/app/components/admin/admin-user/admin-user-edit/admin-user-edit.component.html
@@ -1,7 +1,7 @@
 <!-- * ADMIN-USER-EDIT * -->
-<div class="row">
+<div class="row mb-4 mt-3">
     <div class="container">
-        <div class="row mb-4">
+        <div class="offset-md-10">
             <a class="btn btn-default"
                [routerLink]="['/admin/users']">
                 <i class="fal fa-arrow-circle-left"></i>&nbsp;All Users
