--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -31,8 +31,8 @@
                         <th colspan="2">User</th>
                         <th scope="col">Email</th>
                         <th scope="col">Date</th>
-                        <th scope="col">Admin</th>
-                        <th scope="col">Options</th>
+                        <th scope="col" style="text-align:center;">Admin</th>
+                        <th scope="col" style="text-align:center;">Options</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -61,8 +61,8 @@
                                     No
                             </span>
                         </td>
-                        <td>
-                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                        <td scope="col" style="text-align:center;">
+                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/users/', user.uid]">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
@@ -72,23 +72,23 @@
                 </table>
             </div>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/users']">1</a></li>
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <!--<nav aria-label="Page navigation example">-->
+                <!--<ul class="pagination">-->
+                    <!--<li class="page-item">-->
+                        <!--<a class="page-link" [routerLink]="['/admin/users']" aria-label="Previous">-->
+                            <!--<span aria-hidden="true">&laquo;</span>-->
+                            <!--<span class="sr-only">Previous</span>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li class="page-item"><a class="page-link" [routerLink]="['/admin/users']">1</a></li>-->
+                    <!--<li class="page-item">-->
+                        <!--<a class="page-link" [routerLink]="['/admin/users']" aria-label="Next">-->
+                            <!--<span aria-hidden="true">&raquo;</span>-->
+                            <!--<span class="sr-only">Next</span>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</nav>-->
 
         </div>
 
