--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -54,17 +54,14 @@
         </div>
     </div>
 
-    <!--<div class="row">-->
-    <!--<div class="container">-->
-    <!--<div class="col-md-4 offset-md-4 text-center">-->
-    <!--<h2 class="card-sec-title">Additional Details</h2>-->
-    <!--<div class="col-4 offset-4">-->
-    <!--<div class="underline"></div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
 
+    <div class="row" *ngIf="page.hasCards && page.cardSectionTitle">
+        <div class="container">
+            <div class="col-md-12 text-center">
+                <h2 class="card-sec-title">{{ page.cardSectionTitle }}</h2>
+            </div>
+        </div>
+    </div>
 
     <div class="row cards" *ngIf="page.hasCards">
         <div class="container">
