--- a/src/styles.css
+++ b/src/styles.css
@@ -344,8 +344,12 @@ h1, h2, h3, h4 {
 
 h5.card-title[_ngcontent-c3] {
     font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-weight: bold;
+    font-weight: bold !important;
     font-size: 20px;
+}
+
+p.text-center > a.btn-warning {
+    bottom: 0;
 }
 
 .col-quote blockquote {
